🏭 MOVE: Lambda Backend Deployment to Production Only
✅ Changes Made:
- Removed entire lambda-deploy job from CI pipeline
- Updated deploy-to-staging to only handle frontend Docker deployment
- Staging now only deploys frontend containers (no backend Lambda)
- Backend Lambda deployment will only happen in production phase

🔄 New Simplified Flow:
1. changed-files → Detects changes
2. build-and-test → Tests frontend & backend
3. docker-build-and-push → Builds frontend Docker image
4. deploy-to-staging → Deploys ONLY frontend to ECS staging
5. deploy-to-production → Will deploy BOTH frontend + backend Lambda

Benefits:
- Staging is faster (frontend only)
- Backend Lambda only deployed to production (more secure)
- Simpler pipeline with fewer parallel jobs
- Production gets full stack deployment

Next step: Need to add Lambda deployment logic to deploy-to-production job.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -274,309 +274,11 @@ jobs:
               body: `@${{ github.repository_owner }} Docker image is now available in ECR! ✅`
             });
 
-  lambda-deploy:
-    name: "🎆 Deploy Backend to Lambda"
-    needs: [build-and-test]  # ⬅️ Runs parallel to Docker build
-    if: success() && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    outputs:
-      lambda-endpoint: ${{ steps.deploy.outputs.api_endpoint }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Debug deployment status
-        run: |
-          echo "Build and test job status: ${{ needs.build-and-test.result }}"
-          echo "Proceeding with Lambda deployment..."
-
-      - name: Setup Node.js for Backend
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'  # Lambda uses Node 18
-          cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
-
-      - name: Install backend dependencies
-        run: |
-          cd backend
-          npm ci
-          
-          # Install serverless-http if not present (required for lambda handler)
-          if ! npm list serverless-http >/dev/null 2>&1; then
-            echo "Installing missing serverless-http dependency..."
-            npm install serverless-http
-            echo "✅ serverless-http installed"
-          else
-            echo "✅ serverless-http already available"
-          fi
-
-      - name: Install Serverless Framework and plugins
-        run: |
-          npm install -g serverless@3
-          
-          # Install required serverless plugins
-          cd backend
-          npm install --save-dev serverless-plugin-typescript serverless-offline
-          
-          echo "✅ Serverless Framework and plugins installed"
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: Create environment file for Lambda
-        run: |
-          cd backend
-          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
-          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
-          echo "JWT_EXPIRES_IN=${{ secrets.JWT_EXPIRES_IN || '7d' }}" >> .env
-          echo "S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}" >> .env
-          echo "AWS_REGION=eu-west-1" >> .env
-          echo "S3_REGION=eu-west-1" >> .env
-          echo "CLOUDFRONT_DOMAIN=${{ secrets.CLOUDFRONT_DOMAIN }}" >> .env
-          echo "CLOUDFRONT_DISTRIBUTION_ID=${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}" >> .env
-          echo "MAX_FILES_PER_UPLOAD=${{ secrets.MAX_FILES_PER_UPLOAD || '20' }}" >> .env
-          echo "MAX_FILE_SIZE=${{ secrets.MAX_FILE_SIZE || '104857600' }}" >> .env
-          echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
-          echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
-          echo "HELIO_BASE_URL_DEV=${{ secrets.HELIO_BASE_URL_DEV }}" >> .env
-          echo "HELIO_CLUSTER=${{ secrets.HELIO_CLUSTER }}" >> .env
-          echo "HELIO_API_KEY=${{ secrets.HELIO_API_KEY }}" >> .env
-
-      - name: Validate serverless configuration and deployment bucket
-        run: |
-          cd backend
-          echo "Validating serverless.yml configuration..."
-          
-          # Check if serverless.yml exists
-          if [ ! -f "serverless.yml" ]; then
-            echo "❌ serverless.yml not found!"
-            exit 1
-          fi
-          
-          # Validate S3_BUCKET_NAME is set
-          if [ -z "${{ secrets.S3_BUCKET_NAME }}" ]; then
-            echo "❌ S3_BUCKET_NAME secret is not set!"
-            echo "This is required for serverless deployment bucket."
-            exit 1
-          fi
-          
-          # Check if deployment bucket exists and is accessible
-          echo "Checking S3 deployment bucket access..."
-          if aws s3 ls ${{ secrets.S3_BUCKET_NAME }} >/dev/null 2>&1; then
-            echo "✅ S3 deployment bucket is accessible"
-          else
-            echo "⚠️ S3 deployment bucket not accessible, will be created during deployment"
-          fi
-          
-          # Validate serverless config
-          npx serverless print --stage staging --region eu-west-1 > /dev/null
-          echo "✅ Serverless configuration is valid"
-
-      - name: Build backend
-        run: |
-          cd backend
-          echo "Building backend application..."
-          
-          # Check if TypeScript files exist
-          if [ -f "tsconfig.json" ]; then
-            echo "TypeScript configuration found, compiling TypeScript..."
-            
-            # Install TypeScript if not present
-            if ! npx tsc --version >/dev/null 2>&1; then
-              echo "Installing TypeScript..."
-              npm install --save-dev typescript
-            fi
-            
-            # Clean previous build
-            rm -rf dist/ || echo "No previous dist/ to clean"
-            
-            # Compile TypeScript with proper module settings for Lambda
-            echo "Compiling TypeScript for Lambda (CommonJS)..."
-            npx tsc --module commonjs --target es2020 --outDir dist --esModuleInterop true --allowSyntheticDefaultImports true
-            echo "✅ TypeScript compilation completed"
-            
-            # Verify compiled lambda handler exists
-            if [ -f "dist/lambda.js" ]; then
-              echo "✅ Compiled lambda handler found at dist/lambda.js"
-            else
-              echo "❌ dist/lambda.js not found after compilation!"
-              echo "Contents of dist/ directory:"
-              ls -la dist/ || echo "dist/ directory is empty or does not exist"
-            fi
-          fi
-          
-          # Check if build script exists in package.json
-          if npm run | grep -q "build"; then
-            echo "Running npm build script..."
-            npm run build
-            echo "✅ Backend build script completed"
-          else
-            echo "⚠️ No build script found in package.json"
-          fi
-          
-          # Verify lambda handler file exists
-          if [ -f "src/lambda.ts" ]; then
-            echo "✅ Lambda handler found at src/lambda.ts"
-            HANDLER_FILE="src/lambda.ts"
-          elif [ -f "dist/lambda.js" ]; then
-            echo "✅ Compiled lambda handler found at dist/lambda.js"
-            HANDLER_FILE="dist/lambda.js"
-          elif [ -f "lambda.js" ]; then
-            echo "✅ Lambda handler found at lambda.js"
-            HANDLER_FILE="lambda.js"
-          else
-            echo "❌ Lambda handler file not found!"
-            echo "Expected locations: src/lambda.ts, dist/lambda.js, or lambda.js"
-            ls -la src/ || echo "src/ directory not found"
-            ls -la dist/ || echo "dist/ directory not found"
-            ls -la . | grep -E '\.(js|ts)$' || echo "No JS/TS files in root"
-            exit 1
-          fi
-          
-          # Verify serverless.yml references exist for handlers
-          echo "Checking serverless.yml handler references..."
-          if grep -q "handler:" serverless.yml; then
-            echo "Handler references found in serverless.yml:"
-            grep "handler:" serverless.yml | head -5
-            echo "✅ Serverless configuration contains handler references"
-            
-            # Check if handlers reference compiled files correctly
-            if grep -q "src/lambda.handler" serverless.yml; then
-              echo "Handler references src/lambda.handler - serverless-plugin-typescript will handle compilation"
-              echo "✅ Handler configuration is correct for TypeScript"
-            else
-              echo "⚠️ Handler does not reference src/lambda.handler, may need manual verification"
-            fi
-          else
-            echo "❌ No handler references found in serverless.yml!"
-            exit 1
-          fi
-
-      - name: Deploy to Lambda (Staging)
-        id: deploy
-        run: |
-          cd backend
-          echo "Deploying backend services to Lambda..."
-          
-          # Set deployment timeout
-          export SLS_DEBUG=true
-          
-          # Deploy to staging environment with error handling
-          if ! serverless deploy --stage staging --region eu-west-1 --verbose; then
-            echo "❌ Serverless deployment failed!"
-            echo "Checking for common issues..."
-            
-            # Check AWS credentials
-            aws sts get-caller-identity || echo "AWS credentials issue"
-            
-            # Check S3 bucket permissions (deployment bucket)
-            aws s3 ls ${{ secrets.S3_BUCKET_NAME }} || echo "S3 bucket access issue"
-            
-            exit 1
-          fi
-          
-          echo "✅ Serverless deployment completed"
-          
-          # Get the API Gateway endpoint with multiple parsing methods
-          echo "Getting API Gateway endpoint..."
-          API_INFO=$(serverless info --stage staging --region eu-west-1)
-          
-          # Method 1: Extract from endpoints section
-          API_ENDPOINT=$(echo "$API_INFO" | grep -E 'https://[a-zA-Z0-9]+\.execute-api\.[a-zA-Z0-9-]+\.amazonaws\.com/[a-zA-Z0-9-]+' | head -1 | sed 's/.*\(https:\/\/[^[:space:]]*\).*/\1/')
-          
-          # Method 2: Look for REST API URL pattern  
-          if [ -z "$API_ENDPOINT" ]; then
-            API_ENDPOINT=$(echo "$API_INFO" | grep -o 'https://[^[:space:]]*execute-api[^[:space:]]*' | head -1)
-          fi
-          
-          # Method 3: Use AWS CLI to get API Gateway URL
-          if [ -z "$API_ENDPOINT" ]; then
-            echo "Trying AWS CLI method to get API Gateway URL..."
-            REST_API_ID=$(aws apigateway get-rest-apis --region eu-west-1 --query "items[?name=='nerdwork-backend-staging'].id" --output text)
-            if [ ! -z "$REST_API_ID" ] && [ "$REST_API_ID" != "None" ]; then
-              API_ENDPOINT="https://${REST_API_ID}.execute-api.eu-west-1.amazonaws.com/staging"
-            fi
-          fi
-          
-          if [ -z "$API_ENDPOINT" ]; then
-            echo "⚠️ Could not extract API endpoint with any method"
-            echo "Full serverless info output:"
-            echo "$API_INFO"
-            echo "Setting fallback endpoint..."
-            API_ENDPOINT="https://api-staging.nerdwork-plus.com"  # Fallback
-          fi
-          
-          echo "api_endpoint=$API_ENDPOINT" >> $GITHUB_OUTPUT
-          echo "Lambda API deployed at: $API_ENDPOINT"
-          
-          echo "✅ Backend services deployed to AWS Lambda successfully"
-
-      - name: Run Lambda health check
-        run: |
-          if [ ! -z "${{ steps.deploy.outputs.api_endpoint }}" ]; then
-            echo "Testing Lambda endpoint health..."
-            curl -f "${{ steps.deploy.outputs.api_endpoint }}/health" || echo "Health check endpoint not available yet"
-          fi
-
-      - name: Create Lambda deployment notification
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const issueBody = `# 🎆 Backend Deployed to Lambda Successfully!
-
-            ## 🚀 Lambda Deployment Details
-            - **Service:** nerdwork-backend
-            - **Stage:** staging
-            - **Region:** eu-west-1
-            - **API Gateway Endpoint:** ${{ steps.deploy.outputs.api_endpoint }}
-            - **Commit:** [${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})
-            - **Build:** [View Logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
-
-            ## 🔗 API Endpoint
-            \`\`\`
-            ${{ steps.deploy.outputs.api_endpoint }}
-            \`\`\`
-
-            ## 🛠️ Test Commands
-            \`\`\`bash
-            # Health check
-            curl ${{ steps.deploy.outputs.api_endpoint }}/health
-
-            # API documentation
-            curl ${{ steps.deploy.outputs.api_endpoint }}/docs
-            \`\`\`
-
-            > **Note:** Frontend deployment will use this API endpoint for backend communication.
-            `;
-
-            const issue = await github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: '🎆 Lambda Backend Deployed - staging',
-              body: issueBody,
-              labels: ['lambda', 'backend', 'staging', 'deployment']
-            });
-
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: issue.data.number,
-              body: `@${{ github.repository_owner }} Backend services are now live on Lambda! 🎆✅`
-            });
 
   deploy-to-staging:
     name: "🚀 Deploy to Staging Environment"
-    needs: [docker-build-and-push, lambda-deploy, changed-files]  # ⬅️ Waits for both builds
-    if: |
-      always() && github.ref == 'refs/heads/main' && (
-        (needs.docker-build-and-push.result == 'success') ||
-        (needs.lambda-deploy.result == 'success')
-      )
+    needs: [docker-build-and-push]  # ⬅️ Waits for Docker build
+    if: success() && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment:
       name: staging
@@ -588,11 +290,8 @@ jobs:
         run: |
           echo "Deployment Status Summary:"
           echo "Docker build result: ${{ needs.docker-build-and-push.result }}"
-          echo "Lambda deploy result: ${{ needs.lambda-deploy.result }}"
-          echo "Frontend changes: ${{ needs.changed-files.outputs.frontend-tests }}"
-          echo "Backend changes: ${{ needs.changed-files.outputs.backend-tests }}"
           echo "Current branch: ${{ github.ref }}"
-          echo "Proceeding with staging deployment..."
+          echo "Proceeding with staging deployment (frontend only)..."
 
       - name: Create deployment
         id: deployment
@@ -637,7 +336,7 @@ jobs:
           echo "DATABASE_URL=${{ secrets.STAGING_DATABASE_URL }}" > .env
           echo "API_KEY=${{ secrets.STAGING_API_KEY }}" >> .env
           echo "SERVICE_URL=${{ secrets.STAGING_SERVICE_URL || 'https://staging.nerdwork-plus.example.com' }}" >> .env
-          echo "API_ENDPOINT=${{ needs.lambda-deploy.outputs.lambda-endpoint || secrets.STAGING_API_ENDPOINT }}" >> .env
+          echo "API_ENDPOINT=${{ secrets.STAGING_API_ENDPOINT }}" >> .env
           echo "JWT_SECRET=${{ secrets.STAGING_JWT_SECRET }}" >> .env
           echo "AWS_REGION=${{ secrets.AWS_REGION || 'eu-west-1' }}" >> .env
           echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> .env
@@ -659,21 +358,15 @@ jobs:
           source .env
           set +a
 
-          # Deploy frontend and connect to backend
+          # Deploy frontend to staging
           echo "Frontend image version: ${{ needs.docker-build-and-push.outputs.image-version || 'N/A' }}"
-          echo "Backend API endpoint: ${{ needs.lambda-deploy.outputs.lambda-endpoint || 'N/A' }}"
+          echo "Backend API endpoint: ${{ secrets.STAGING_API_ENDPOINT || 'Not configured' }}"
 
-          # Update ECS service with new image (if Docker build succeeded)
-          if [ "${{ needs.docker-build-and-push.result }}" == "success" ]; then
-            echo "Deploying frontend to ECS..."
-            # aws ecs update-service --cluster staging-cluster --service nerdwork-frontend --force-new-deployment --region eu-west-1
-          fi
-
-          # Verify Lambda deployment (if Lambda deploy succeeded)
-          if [ "${{ needs.lambda-deploy.result }}" == "success" ] && [ ! -z "${{ needs.lambda-deploy.outputs.lambda-endpoint }}" ]; then
-            echo "Backend Lambda API is available at: ${{ needs.lambda-deploy.outputs.lambda-endpoint }}"
-            curl -f "${{ needs.lambda-deploy.outputs.lambda-endpoint }}/health" || echo "Health check not available"
-          fi
+          # Update ECS service with new image
+          echo "Deploying frontend to ECS staging..."
+          # aws ecs update-service --cluster staging-cluster --service nerdwork-frontend --force-new-deployment --region eu-west-1
+          
+          echo "✅ Frontend deployed to staging (Backend will be deployed to production only)"
 
           echo "✅ Deployment to staging environment completed"
 
