--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "turbo": "^2.5.4"
   },
   "dependencies": {
+    "@aws-sdk/cloudfront-signer": "^3.893.0",
     "@neondatabase/serverless": "^1.0.1",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.0",
