fix: Remove invalid rootDirectory property from vercel.json
- Remove unsupported rootDirectory property that caused deployment error
- Simplify build command to change directory and run npm build
- Keep essential configuration for framework detection and Node version
- Fixes 'should NOT have additional property rootDirectory' error

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "pnpm build --filter=nerdwork-plus",
+  "buildCommand": "cd apps/web/nerdwork-plus && npm run build",
   "installCommand": "pnpm install --frozen-lockfile",
-  "rootDirectory": "apps/web/nerdwork-plus",
   "framework": "nextjs",
   "nodeVersion": "18.x"
 }
