fix: Use Vercel builds configuration for monorepo deployment
- Use builds array to specify Next.js app location
- Configure routes to handle monorepo structure
- Point to next.config.ts as the source for @vercel/next builder
- Should resolve monorepo deployment issues on Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
-  "buildCommand": "cd apps/web/nerdwork-plus && npm run build",
-  "installCommand": "pnpm install --frozen-lockfile",
-  "framework": "nextjs",
-  "nodeVersion": "18.x"
+  "version": 2,
+  "builds": [
+    {
+      "src": "apps/web/nerdwork-plus/next.config.ts",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "apps/web/nerdwork-plus/$1" }
+  ]
 }
