fix: Simplify vercel.json to minimal valid configuration
- Use package.json as source instead of next.config.ts
- Remove complex routing that might cause issues
- Keep only essential builds configuration
- Should resolve any remaining validation errors

--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "apps/web/nerdwork-plus/next.config.ts",
+      "src": "apps/web/nerdwork-plus/package.json",
       "use": "@vercel/next"
     }
-  ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "apps/web/nerdwork-plus/$1" }
   ]
 }
