fix: Resolve Lambda deployment issues
- Fix serverless.yml handler path to point to correct lambda.ts location
- Move all routes configuration to server.ts for Lambda compatibility
- Remove app.listen() from index.ts which causes issues in serverless environment
- Add proper Lambda types and error handling in lambda.ts handler
- Fix package.json dependencies:
  - Add @types/aws-lambda for proper typing
  - Fix body-parser version to stable 1.x
  - Remove conflicting aws-sdk v2 (keeping v3 AWS SDK clients)
  - Remove redundant serverless-http package
  - Add serverless framework and plugins
- Add Lambda deployment and testing scripts
- Resolves 'TypeError: ee.on is not a function' Lambda runtime error

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -71,7 +71,7 @@ plugins:
 
 functions:
   api:
-    handler: src/lambda.handler
+    handler: lambda.handler
     events:
       - http:
           path: /{proxy+}
