--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,12 @@
     "migrate:dev": "drizzle-kit migrate --config=./src/config/drizzle-dev.config.ts",
     "push:dev": "drizzle-kit push --config=./src/config/drizzle-dev.config.ts",
     "test:backend": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "deploy:dev": "sls deploy --stage dev",
+    "deploy:prod": "sls deploy --stage prod",
+    "invoke:local": "sls invoke local -f api",
+    "offline": "sls offline start",
+    "build:lambda": "tsc && cp package.json dist/"
   },
   "keywords": [],
   "author": "",
@@ -35,12 +40,12 @@
     "@types/morgan": "^1.9.10",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/aws-lambda": "^8.10.143",
     "@vendia/serverless-express": "^4.12.6",
-    "aws-sdk": "^2.1692.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
-    "body-parser": "^2.2.0",
+    "body-parser": "^1.20.2",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -53,7 +58,6 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
-    "serverless-http": "^4.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
@@ -75,7 +79,10 @@
     "jest": "^30.0.2",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
-    "tsx": "^4.20.5"
+    "tsx": "^4.20.5",
+    "serverless": "^3.38.0",
+    "serverless-plugin-typescript": "^2.1.5",
+    "serverless-offline": "^13.3.3"
   },
   "transform": {
     "\\.[jt]sx?$": [
