feat: Implement complete microservices Lambda architecture
🏗️ Architecture Changes:
- Convert monolithic backend to 7 separate Lambda microservices
- Each service handles specific domain functionality with isolated scaling
- Maintain backwards compatibility with original monolith handler

🚀 Lambda Services Created:
- auth-service: Handles /auth/* endpoints
- user-service: Handles /profile/* and /users/* endpoints
- comic-service: Handles /comics/*, /chapters/*, /library/* endpoints
- file-service: Handles /file-upload/* endpoints
- wallet-service: Handles /wallet/*, /transactions/* endpoints
- ledger-service: Handles /nft/*, /payment/* endpoints
- event-service: Handles /events/*, /tickets/* endpoints

⚙️ Configuration Updates:
- Update serverless.yml with all 7 Lambda functions
- Configure API Gateway routing for each service
- Add health check endpoints for each service
- Proper error handling and logging per service

📦 Deployment Scripts:
- Individual service deployment: npm run deploy:auth, deploy:user, etc.
- Individual service testing: npm run test:auth, test:user, etc.
- Complete deployment guide and documentation

✅ Benefits:
- Independent scaling per service
- Isolated failures and deployments
- Better cost optimization
- Service-specific monitoring and logs
- Easier debugging and maintenance

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,23 @@
     "test:watch": "jest --watch",
     "deploy:dev": "sls deploy --stage dev",
     "deploy:prod": "sls deploy --stage prod",
+    "deploy:auth": "sls deploy function -f auth-service --stage dev",
+    "deploy:user": "sls deploy function -f user-service --stage dev",
+    "deploy:comic": "sls deploy function -f comic-service --stage dev",
+    "deploy:file": "sls deploy function -f file-service --stage dev",
+    "deploy:wallet": "sls deploy function -f wallet-service --stage dev",
+    "deploy:ledger": "sls deploy function -f ledger-service --stage dev",
+    "deploy:event": "sls deploy function -f event-service --stage dev",
     "invoke:local": "sls invoke local -f api",
     "offline": "sls offline start",
-    "build:lambda": "tsc && cp package.json dist/"
+    "build:lambda": "tsc && cp package.json dist/",
+    "test:auth": "sls invoke local -f auth-service",
+    "test:user": "sls invoke local -f user-service",
+    "test:comic": "sls invoke local -f comic-service",
+    "test:file": "sls invoke local -f file-service",
+    "test:wallet": "sls invoke local -f wallet-service",
+    "test:ledger": "sls invoke local -f ledger-service",
+    "test:event": "sls invoke local -f event-service"
   },
   "keywords": [],
   "author": "",
