--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "dev": "turbo run dev --parallel",
     "build": "turbo run build",
+    "start": "cd backend && npm start",
     "lint": "eslint . --ext .ts",
     "test": "jest",
     "cdk": "cd infra && cdk",
@@ -57,6 +58,7 @@
     "pg": "^8.16.2",
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "tsx": "^4.20.5"
   }
 }
