--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "cd apps/web/nerdwork-plus && npm install && npm run build",
+  "buildCommand": "cd apps/web/nerdwork-plus && pnpm run build",
   "outputDirectory": "apps/web/nerdwork-plus/.next"
 }
